fix spacing issue caused by tips panel

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -825,11 +825,18 @@ th {
   margin-top: 2rem; }
 
 .tips-wrap {
-  float: right;
-  padding: 1rem;
-  border: 1px solid #eee;
-  border-radius: 3px;
-  color: #999; }
+  display: none; }
+
+@media (min-width: 768px) {
+  .tips-wrap {
+    display: block;
+    position: absolute;
+    top: 3rem;
+    right: 0;
+    padding: 1rem;
+    border: 1px solid #eee;
+    border-radius: 3px;
+    color: #999; } }
 
 .chosen-container {
   font-size: 1.5rem; }
