--- a/src/scss/partials/_main.scss
+++ b/src/scss/partials/_main.scss
@@ -28,9 +28,17 @@
   margin-top:2rem;
 }
 .tips-wrap{
-  float:right;
-  padding:1rem;
-  border:1px solid #eee;
-  border-radius:3px;
-  color:#999;
+  display:none;
+}
+@media(min-width:768px){
+  .tips-wrap{
+    display:block;
+    position:absolute;
+    top:3rem;
+    right:0;
+    padding:1rem;
+    border:1px solid #eee;
+    border-radius:3px;
+    color:#999;
+  }
 }
